# tcs-vslice-0.4

./: .gitignore  .scalafmt.conf  CHANGELOG.md  README.md  brew-zip.sh  build-deps.sh  build.sbt  docker-build.sh  docker-run.sh  install.sh
enc-assembly/src/main/resources/: reference.conf
enc-assembly/src/main/scala/tcs/enc/: EncAssemblyBehaviorFactory.scala  EncAssemblyHandlers.scala
enc-assembly/src/test/resources/: enc-assembly-standalone.conf
enc-assembly/src/test/scala/tcs/enc/: EncAssemblyTest.scala
enc-hcd/src/main/resources/: reference.conf
enc-hcd/src/main/scala/tcs/enc/: EncHcdBehaviorFactory.scala  EncHcdHandlers.scala
enc-hcd/src/test/resources/: enc-hcd-standalone.conf
enc-hcd/src/test/scala/tcs/enc/: EncHcdTest.scala
mcs-assembly/src/main/resources/: reference.conf
mcs-assembly/src/main/scala/tcs/mcs/: CoordUtil.scala  McsAssemblyBehaviorFactory.scala  McsAssemblyHandlers.scala
mcs-assembly/src/test/resources/: mcs-assembly-standalone.conf
mcs-assembly/src/test/scala/tcs/mcs/: CoordUtilTests.scala  McsAssemblyTest.scala
mcs-hcd/src/main/resources/: reference.conf
mcs-hcd/src/main/scala/tcs/enc/: McsHcdBehaviorFactory.scala  McsHcdHandlers.scala
mcs-hcd/src/test/resources/: mcs-hcd-standalone.conf
mcs-hcd/src/test/scala/tcs/enc/: McsHcdTest.scala
pk-assembly/src/main/java/tcs/pk/wrapper/: IDemandsCB.java  TpkC.java  TpkExternC.java  tpkJni.java  tpkJniJNI.java
pk-assembly/src/main/resources/: PkContainer.conf  reference.conf
pk-assembly/src/main/scala/tcs/pk/: CommandHandlerActor.scala  EventHandlerActor.scala  LifecycleActor.scala  PkAssembly.scala  PkAssemblyBehaviorFactory.scala  PkAssemblyHandlers.scala  SetTargetCmdActor.scala
pk-assembly/src/main/scala/tcs/pk/wrapper/: TpkC.scala  TpkWrapper.scala
pk-assembly/src/test/resources/: pk-assembly-standalone.conf
pk-assembly/src/test/scala/tcs/pk/: PkAssemblyTest.scala
project/: Common.scala  CswBuildInfo.scala  Dependencies.scala  Libs.scala  build.properties  plugins.sbt  publishing.scala
shared/src/main/scala/tcs/shared/: SimulationUtil.scala
shared/src/test/scala/tcs/shared/: SimulationUtilTest.scala
tcs-client/src/main/resources/: application.conf
tcs-client/src/main/scala/tcs/client/: Options.scala  PkClient.scala  PkEventClient.scala  TcsClient.scala
tcs-deploy/: Dockerfile  README.md
tcs-deploy/src/main/resources/: EncContainer.conf  EncHcdStandalone.conf  EncPkContainer.conf  McsContainer.conf  McsEncContainer.conf  McsEncPkContainer.conf  McsHcdStandalone.conf  McsPkContainer.conf  PkContainer.conf  PkStandalone.conf  application.conf
tcs-deploy/src/main/scala/tcs/tcsdeploy/: TcsContainerCmdApp.scala
tcs-deploy/src/test/resources/: application.conf
tcs-deploy/src/test/scala/tcs/: EventHandler.scala  TcsIntegrationTestApp.scala  TcsIntegrationTests.scala
tcs-tcsdeploy/: README.md
tcs-tcsdeploy/src/main/resources/: EncContainer.conf  McsHcdStandalone.conf  McsPkContainer.conf  PkContainer.conf
tcs-tcsdeploy/src/main/scala/tcs/tcsdeploy/: TcsContainerCmdApp.scala
tpk-jni/: CMakeLists.txt  Makefile  README.md  ScanTask.cpp  ScanTask.h  TpkC.cpp  TpkC.h  c-interface.h  impl.cpp  interface.h  swig.i  swig_wrap.cxx
tpk-jni/brew/: Makefile
tpk-jni/doc/: Base Cap.xlsx
tpk-jni/src/: CMakeLists.txt  FakeSystemClock.cpp  FakeSystemClock.h  ScanTask.h  TpkC.cpp  TpkC.h
tpk-jni/test/: BaseCapTests.cpp  CMakeLists.txt
